--- a/WS_SEGUROS_CLIENT/Web.config
+++ b/WS_SEGUROS_CLIENT/Web.config
@@ -26,12 +26,20 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IServiceCliente" />
+        <binding name="BasicHttpBinding_IServiceTareas" />
+        <binding name="BasicHttpBinding_IDepartamentoService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:58630/ServiceCliente.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceCliente"
         contract="ServicioRespuesta.IServiceCliente" name="BasicHttpBinding_IServiceCliente" />
+      <endpoint address="http://localhost:58630/ServiceTareas.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceTareas"
+        contract="ServiceTareas.IServiceTareas" name="BasicHttpBinding_IServiceTareas" />
+      <endpoint address="http://localhost:58630/DepartamentoService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDepartamentoService"
+        contract="DepartamentosService.IDepartamentoService" name="BasicHttpBinding_IDepartamentoService" />
     </client>
   </system.serviceModel>
 </configuration>
