--- a/WS_SEGUROS/WS_SEGUROS.csproj
+++ b/WS_SEGUROS/WS_SEGUROS.csproj
@@ -62,14 +62,29 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DepartamentoService.svc" />
+    <Content Include="ProductoService.svc" />
     <Content Include="ServiceCliente.svc" />
+    <Content Include="ServiceTareas.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartamentoService.svc.cs">
+      <DependentUpon>DepartamentoService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="IDepartamentoService.cs" />
+    <Compile Include="IProductoService.cs" />
     <Compile Include="IServiceCliente.cs" />
+    <Compile Include="IServiceTareas.cs" />
+    <Compile Include="ProductoService.svc.cs">
+      <DependentUpon>ProductoService.svc</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceCliente.svc.cs">
       <DependentUpon>ServiceCliente.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceTareas.svc.cs">
+      <DependentUpon>ServiceTareas.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
